[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kitagawa-hr <kitagawa@cancerscan.jp>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.0"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
